Fix side navigation to be able to close it on mobile

--- a/static/sass/_pattern_p-navigation.scss
+++ b/static/sass/_pattern_p-navigation.scss
@@ -30,6 +30,12 @@
     margin-right: 0;
   }
 
+  @media screen and (max-width: $breakpoint-navigation-threshold - 1) {
+    .p-side-navigation__drawer {
+      margin-block-start: 5rem;
+    }
+  }
+
   @media screen and (min-width: $breakpoint-navigation-threshold) {
     .p-navigation .p-navigation__item.is-selected {
       background-color: $color-x-light;
